# voxnexus

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  generated-content.json  package.json  pnpm-lock.yaml  turbo.json
apps/sip-bridge/: Dockerfile  main.py  requirements.txt
apps/tts/: Dockerfile  main.py  requirements.txt
apps/web/: auth.ts  middleware.ts  next.config.ts  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/app/(auth)/forgot-password/: forgot-form.tsx  page.tsx
apps/web/app/(auth)/login/: login-form.tsx  page.tsx
apps/web/app/(auth)/register/: page.tsx  register-form.tsx
apps/web/app/(auth)/reset-password/: page.tsx  reset-form.tsx
apps/web/app/(auth)/setup-account/: page.tsx  setup-form.tsx
apps/web/app/(dashboard)/: layout.tsx
apps/web/app/(dashboard)/agents/: page.tsx
apps/web/app/(dashboard)/agents/[id]/: page.tsx
apps/web/app/(dashboard)/agents/new/: page.tsx
apps/web/app/(dashboard)/api-keys/: page.tsx
apps/web/app/(dashboard)/billing/: page.tsx
apps/web/app/(dashboard)/branding/: page.tsx
apps/web/app/(dashboard)/conversations/: page.tsx
apps/web/app/(dashboard)/dashboard/: page.tsx
apps/web/app/(dashboard)/settings/: page.tsx
apps/web/app/(dashboard)/sub-accounts/: page.tsx
apps/web/app/(dashboard)/voice-lab/: page.tsx
apps/web/app/(legal)/: layout.tsx
apps/web/app/(legal)/privacy/: page.tsx
apps/web/app/(legal)/terms/: page.tsx
apps/web/app/(marketing)/: layout.tsx
apps/web/app/(marketing)/about/: page.tsx
apps/web/app/admin/: charts-loader.tsx  charts.tsx  layout.tsx  page.tsx
apps/web/app/admin/guardian/: guardian-dashboard.tsx  operator-panel.tsx  page.tsx
apps/web/app/admin/health/: health-checks.tsx  page.tsx
apps/web/app/admin/users/: page.tsx  users-table.tsx
apps/web/app/agent/: agent-console.tsx  layout.tsx  page.tsx
apps/web/app/agent/history/: page.tsx
apps/web/app/agent/settings/: page.tsx  settings-form.tsx
apps/web/app/api/agent/assignments/: route.ts
apps/web/app/api/agent/config/: route.ts
apps/web/app/api/agents/: route.ts
apps/web/app/api/agents/[id]/: route.ts
apps/web/app/api/api-keys/: route.ts
apps/web/app/api/conversations/: route.ts
apps/web/app/api/health/: route.ts
apps/web/app/api/organizations/: route.ts
apps/web/app/api/reports/: route.ts
apps/web/app/api/voices/: route.ts
apps/web/app/feed.xml/: route.ts
apps/web/app/pricing/: page.tsx  pricing-content.tsx
apps/web/app/reports/: page.tsx
apps/web/app/test-session/: page.tsx
apps/web/components/: analytics-tracker.tsx  icons.tsx
apps/web/components/agents/: knowledge-base.tsx  voice-session.tsx
apps/web/components/api-keys/: api-key-actions.tsx
apps/web/components/guardian/: session-inspector.tsx  session-row.tsx
apps/web/components/layout/: header.tsx  sidebar.tsx
apps/web/components/reports/: charts.tsx
apps/web/components/seo/: breadcrumbs.tsx  json-ld.tsx
apps/web/components/ui/: badge.tsx  button.tsx  index.ts  select.tsx  toaster.tsx
apps/web/components/visual-voice/: visual-viewport.tsx
apps/web/components/voice/: recorder.tsx
apps/web/config/: site.ts
apps/web/lib/: analytics.ts  constants.ts  email.ts  pricing.ts  utils.ts
apps/web/public/: robots.txt  sitemap.xml
apps/web/scripts/: create-admin.ts
apps/worker/: .gitignore  README.md  main.py  pyproject.toml
apps/worker/core/: __init__.py  interfaces.py
apps/worker/plugins/: README.md  __init__.py
apps/worker/plugins/chameleon/: __init__.py  adapter.py  engine.py  vox_chameleon.py
apps/worker/plugins/guardian/: __init__.py  _mock.py  vox_guardian.py
apps/worker/plugins/tts/: __init__.py  kokoro.py  voxclone.py
public/: index.html
scripts/: download_models.sh  generate-branding.js
(+33 files in other folders)
