# =============================================================================
# VoxNexus Worker - Python Configuration
# =============================================================================
# Copyright 2026 Cothink LLC. Licensed under Apache-2.0.
# =============================================================================

[project]
name = "voxnexus-worker"
version = "0.1.0"
description = "VoxNexus Voice Agent Worker - The brain of your AI voice agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "Cothink LLC" }
]
keywords = ["voice", "ai", "agent", "livekit", "openai", "tts", "stt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
# Core providers
openai = ["openai>=1.6.0"]
anthropic = ["anthropic>=0.8.0"]
ollama = ["ollama>=0.1.0"]

# STT providers
deepgram = ["deepgram-sdk>=3.0.0"]
assemblyai = ["assemblyai>=0.20.0"]

# TTS providers
cartesia = ["cartesia>=0.1.0"]
elevenlabs = ["elevenlabs>=1.0.0"]

# LiveKit integration
livekit = [
    "livekit>=0.11.0",
    "livekit-agents>=0.8.0",
    "livekit-plugins-silero>=0.6.0",
]

# Development
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.0.0",
]

# All providers
all = [
    "voxnexus-worker[openai,anthropic,ollama,deepgram,cartesia,elevenlabs,livekit]",
]

[project.urls]
Homepage = "https://github.com/your-org/voxnexus"
Documentation = "https://voxnexus.dev/docs"
Repository = "https://github.com/your-org/voxnexus"
Issues = "https://github.com/your-org/voxnexus/issues"

[project.scripts]
voxnexus-worker = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "plugins"]

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B017",   # pytest.raises without match
]

[tool.ruff.lint.isort]
known-first-party = ["core", "plugins"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "deepgram.*",
    "cartesia.*",
    "elevenlabs.*",
    "ollama.*",
    "livekit.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core", "plugins"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
